fixed doi error in paper.bib

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -32,7 +32,7 @@ year = {2020}
 @misc{NGSIM2016,
 author = {{U.S. Department of Transportation Federal Highway Administration}},
 booktitle = {Provided by ITS DataHub through Data.transportation.gov},
-doi = {http://doi.org/10.21949/1504477},
+doi = {10.21949/1504477},
 title = {{Next Generation Simulation (NGSIM) Vehicle Trajectories and Supporting Data. [Dataset]}},
 url = {https://data.transportation.gov/Automobiles/Next-Generation-Simulation-NGSIM-Vehicle-Trajector/8ect-6jqj},
 year = {2016}
